--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,8 +3,11 @@
 .navigation-top {
     .flex-layout(column, space-evenly, center);
     height: 100px;
-    background: #F6F6F6;
+    background: #F6F6F6; 
+    opacity: 0.8;
     width: 100%;
+    position: fixed;
+    top: 0;
 
     h1 {
         font-size: 4rem;
